style: fix overflow functionality in the chat-window component

--- a/src/components/ChatWindow/ChatWindow.css
+++ b/src/components/ChatWindow/ChatWindow.css
@@ -17,8 +17,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*overflow: auto;*/
-  overflow: scroll;
+  overflow: auto;
 }
 
 .message-card {
